base/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
spec:
  selector:
    app: test-api
    tier: back
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
